build out session handling

--- a/src/Catalyst.Node.Common/Catalyst.Node.Common.csproj
+++ b/src/Catalyst.Node.Common/Catalyst.Node.Common.csproj
@@ -193,6 +193,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Helpers\Commands" />
     <Folder Include="Helpers\Enumerator" />
     <Folder Include="Helpers\Events" />
     <Folder Include="Helpers\FileSystem" />
