--- a/src/Catalyst.Node.Core/Properties/launchSettings.json
+++ b/src/Catalyst.Node.Core/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Catalyst.Node.Core": {
       "commandName": "Project",
-      "commandLineArgs": "--peer-public-key abcdefghijklmnopqrst --disable-wallet --disable-dfs --disable-gossip --disable-ledger -d"
+      "commandLineArgs": "--peer-public-key abcdefghijklmnopqrst --disable-wallet --disable-dfs --disable-ledger -d"
     }
   }
 }
