--- a/src/Catalyst.Cli/config.shell.json
+++ b/src/Catalyst.Cli/config.shell.json
@@ -2,10 +2,10 @@
   "defaultAssembly": "Catalyst.Cli",
   "components": [
     {
-      "type": "Catalyst.Catalyst.Helpers.Shell.Catalyst.Helpers.Shell, Catalyst.Helpers.Shell",
+      "type": "Catalyst.Node.Common.Helpers.Shell.Shell, Catalyst.Node.Common",
       "services": [
         {
-          "type": "Catalyst.Catalyst.Helpers.Shell.IAds, Catalyst.Helpers.Shell"
+          "type": "Catalyst.Node.Common.Interfaces.IAds, Catalyst.Node.Common"
         }
       ]
     }
