--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -82,12 +82,26 @@
       ]
     },
     {
-      "type": "Ipfs.Engine.IpfsEngine, Ipfs.Engine",
+      "type": "Catalyst.Node.Core.Modules.Dfs.InjectablePassphraseStringIpfsEngine, Catalyst.Node.Core",
       "services": [
         {
           "type": "Ipfs.CoreApi.ICoreApi, Ipfs.Core"
         }
-      ]
+      ],
+      "parameters": {
+        "passphrase": "password"
+      }
+    },
+    {
+      "type": "Catalyst.Node.Core.Modules.Dfs.InjectablePassphraseStringIpfsEngine, Catalyst.Node.Core",
+      "services": [
+        {
+          "type": "PeerTalk.IService, PeerTalk"
+        }
+      ],
+      "parameters": {
+        "passphrase": "DhndFDsgibdfgSDGiusdgbhgvsdGdsibfsdSDGksdbgsd"
+      }
     },
     {
       "type": "Catalyst.Node.Common.Helpers.Network.InjectableLookupClient, Catalyst.Node.Common",
