--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -26,6 +26,14 @@
       ]
     },
     {
+      "type": "Catalyst.Node.Core.RPC.CLIRPCServerSettings",
+      "services": [
+        {
+          "type": "Catalyst.Node.Common.Interfaces.ICLIRPCServerSettings, Catalyst.Node.Common"
+        }
+      ]
+    },
+    {
       "type": "Catalyst.Node.Core.P2P.PeerSettings",
       "services": [
         {
