--- a/src/Common.UnitTests.props
+++ b/src/Common.UnitTests.props
@@ -7,4 +7,14 @@
     <Optimize>false</Optimize>
   </PropertyGroup>
   <Import Project="./Common.Projects.props" />
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.6.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="NSubstitute" Version="4.0.0" />
+    <PackageReference Include="xunit.core" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.reporters" Version="2.4.1" />
+    <PackageReference Include="xunit.assert" Version="2.4.1" />
+    <PackageReference Include="coverlet.msbuild" Version="2.6.0" />
+  </ItemGroup>
 </Project>
