update ipfsconnector wrapper

--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -97,6 +97,9 @@
       "services": [
         {
           "type": "PeerTalk.IService, PeerTalk"
+        },
+        {
+          "type": "Ipfs.CoreApi.ICoreApi, Ipfs.Core"
         }
       ],
       "parameters": {
