--- a/src/Catalyst.Cli/Catalyst.Cli.csproj
+++ b/src/Catalyst.Cli/Catalyst.Cli.csproj
@@ -1,4 +1,4 @@
-<Project>
+﻿<Project>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <Title>Catalyst CLI</Title>
@@ -7,17 +7,31 @@
     <AssemblyCopyrightAttribute>Copyright © 2019 AtlasCity.io</AssemblyCopyrightAttribute>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
-  <Import Project="../Common.Projects.props"/>
+  <Import Project="../Common.Projects.props" />
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.8.1"/>
-    <PackageReference Include="Autofac.Configuration" Version="4.1.0"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1"/>
-    <PackageReference Include="DotNetty.Codecs" Version="0.6.0"/>
-    <PackageReference Include="DotNetty.Handlers" Version="0.6.0"/>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.0"/>
+    <PackageReference Include="Autofac" Version="4.8.1" />
+    <PackageReference Include="Autofac.Configuration" Version="4.1.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
+    <PackageReference Include="AutofacSerilogIntegration" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+    <PackageReference Include="DotNetty.Codecs" Version="0.6.0" />
+    <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview3.19153.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.0" />
+    <PackageReference Include="Serilog" Version="2.7.1" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
+    <PackageReference Include="Serilog.Enrichers.Thread" Version="3.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00801" />
+    <PackageReference Include="SharpRepository.Caching.Redis" Version="2.0.2.2" />
+    <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3-prerelease" />
+    <PackageReference Include="SharpRepository.Ioc.Autofac" Version="2.0.4.1-prerelease" />
+    <PackageReference Include="SharpRepository.MongoDbRepository" Version="2.0.7.2-prerelease" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Catalyst.Node.Common\Catalyst.Node.Common.csproj"/>
+    <ProjectReference Include="..\Catalyst.Node.Common\Catalyst.Node.Common.csproj" />
+    <ProjectReference Include="..\Catalyst.Node.Core\Catalyst.Node.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="config.shell.json">
