--- a/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
+++ b/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
@@ -1,4 +1,4 @@
-<Project>
+﻿<Project>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <Title>Catalyst Node</Title>
@@ -41,7 +41,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Catalyst.Node.Common\Catalyst.Node.Common.csproj" />
-    <ProjectReference Include="..\Catalyst.Cli\Catalyst.Cli.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Config\*.json">
