--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -5,7 +5,7 @@
       "type": "Catalyst.Cli.CatalystCli",
       "services": [
         {
-          "type": "Catalyst.Cli.ICatalystCli, Catalyst.Cli"
+          "type": "Catalyst.Node.Common.Interfaces.ICatalystCli, Catalyst.Node.Common"
         }
       ]
     },
@@ -18,10 +18,26 @@
       ]
     },
     {
-      "type": "Catalyst.Cli.RPCClient",
+      "type": "Catalyst.Node.Common.Helpers.Cryptography.ConsolePasswordReader, Catalyst.Node.Common",
       "services": [
         {
-          "type": "Catalyst.Cli.IRPCClient, Catalyst.Cli"
+          "type": "Catalyst.Node.Common.Interfaces.IPasswordReader, Catalyst.Node.Common"
+        }
+      ]
+    },
+    {
+      "type": "Catalyst.Cli.RpcClient",
+      "services": [
+        {
+          "type": "Catalyst.Node.Common.Interfaces.IRpcClient, Catalyst.Node.Common"
+        }
+      ]
+    },
+    {
+      "type": "Catalyst.Node.Common.Helpers.FileSystem.FileSystem, Catalyst.Node.Common",
+      "services": [
+        {
+          "type": "Catalyst.Node.Common.Interfaces.IFileSystem, Catalyst.Node.Common"
         }
       ]
     },
