--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -10,7 +10,15 @@
       ]
     },
     {
-      "type": "Catalyst.Node.Common.Helpers.Shell.Shell, Catalyst.Node.Common",
+      "type": "Catalyst.Cli.RpcNodes",
+      "services": [
+        {
+          "type": "Catalyst.Node.Common.Interfaces.IRpcNodes, Catalyst.Node.Common"
+        }
+      ]
+    },
+    {
+      "type": "Catalyst.Cli.Shell",
       "services": [
         {
           "type": "Catalyst.Node.Common.Interfaces.IAds, Catalyst.Node.Common"
