--- a/src/Catalyst.Node.Common.UnitTests/Catalyst.Node.Common.UnitTests.csproj
+++ b/src/Catalyst.Node.Common.UnitTests/Catalyst.Node.Common.UnitTests.csproj
@@ -9,4 +9,7 @@
   <ItemGroup>
     <Folder Include="Helpers\Util\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+  </ItemGroup>
 </Project>
