--- a/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTest.csproj
+++ b/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTest.csproj
@@ -4,7 +4,7 @@
   </PropertyGroup>
   <Import Project="../Common.UnitTests.props" />
   <ItemGroup>
-    <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.6" />
+    <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.7" />
     <PackageReference Include="SharpRepository.XmlRepository" Version="2.0.1-alpha3" />
     <PackageReference Include="coverlet.msbuild" Version="2.6.0">
       <PrivateAssets>all</PrivateAssets>
@@ -31,5 +31,8 @@
     <None Update="Config\Modules\mempool.xml.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.0.1" />
   </ItemGroup>
 </Project>
