--- a/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
+++ b/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
@@ -12,7 +12,6 @@
     <PackageReference Include="Autofac.Configuration" Version="4.1.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
     <PackageReference Include="AutofacSerilogIntegration" Version="2.0.0" />
-    <PackageReference Include="BouncyCastle.NetCore" Version="1.8.5" />
     <PackageReference Include="Catalyst.Protocol" Version="0.0.1.1912-beta" />
     <PackageReference Include="DnsClient" Version="1.2.0" />
     <PackageReference Include="DotNetty.Codecs" Version="0.6.0" />
@@ -22,7 +21,6 @@
     <PackageReference Include="Ipfs.Api" Version="0.23.6" />
     <PackageReference Include="Ipfs.Core" Version="0.40.0" />
     <PackageReference Include="Ipfs.Engine" Version="0.3.0" />
-    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
     <PackageReference Include="Networker.Formatter.ProtobufNet" Version="3.0.9-rc" />
@@ -34,12 +32,8 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00801" />
     <PackageReference Include="Dawn.Guard" Version="1.8.0" />
-    <PackageReference Include="SharpRepository.Caching.Redis" Version="2.0.2.2" />
     <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3.1" />
     <PackageReference Include="SharpRepository.Ioc.Autofac" Version="2.0.4.2" />
-    <PackageReference Include="SharpRepository.MongoDbRepository" Version="2.0.7.3" />
-    <PackageReference Include="StackExchange.Redis" Version="2.0.571" />
-    <PackageReference Include="StackExchange.Redis.Extensions.Newtonsoft" Version="4.0.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Catalyst.Node.Common\Catalyst.Node.Common.csproj" />
@@ -51,5 +45,8 @@
     <None Update="Config\Modules\*.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Components\" />
   </ItemGroup>
 </Project>
