--- a/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
+++ b/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
@@ -30,7 +30,7 @@
     <PackageReference Include="Serilog.Enrichers.Thread" Version="3.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Serilog.Sinks.File" Version="4.0.1-dev-00801" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
     <PackageReference Include="Dawn.Guard" Version="1.8.0" />
     <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3.1" />
     <PackageReference Include="SharpRepository.Ioc.Autofac" Version="2.0.4.2" />
