--- a/src/Catalyst.Node.Common/Catalyst.Node.Common.csproj
+++ b/src/Catalyst.Node.Common/Catalyst.Node.Common.csproj
@@ -8,18 +8,18 @@
     <PackageReference Include="Ipfs.Api" Version="0.23.6" />
     <PackageReference Include="Ipfs.Engine" Version="0.3.0" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.8.5" />
-    <PackageReference Include="Dawn.Guard" Version="1.7.0" />
-    <PackageReference Include="Catalyst.Protocol" Version="0.0.1.381-beta" />
+    <PackageReference Include="Dawn.Guard" Version="1.8.0" />
+    <PackageReference Include="Catalyst.Protocol" Version="0.0.1.1912-beta" />
     <PackageReference Include="DnsClient" Version="1.2.0" />
     <PackageReference Include="DotNetty.Transport" Version="0.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="Serilog" Version="2.7.1" />
+    <PackageReference Include="Serilog" Version="2.8.0" />
     <PackageReference Include="libsodium" Version="[1.0.17]" />
-    <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3-prerelease" />
-    <PackageReference Include="System.IO.Abstractions" Version="3.0.10" />
-    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="3.0.10" />
+    <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3.1" />
+    <PackageReference Include="System.IO.Abstractions" Version="3.1.1" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="3.1.1" />
     <PackageReference Include="System.Memory" Version="4.5.2" />
-    <PackageReference Include="System.Reactive.Linq" Version="4.1.2" />
+    <PackageReference Include="System.Reactive.Linq" Version="4.1.3" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.5.2" />
     <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
   </ItemGroup>
@@ -201,7 +201,6 @@
     <Folder Include="Interfaces\Modules\Contract" />
     <Folder Include="Interfaces\Modules\KeySigner" />
     <Folder Include="Interfaces\Modules\Ledger" />
-    <Folder Include="Interfaces\Modules\Mempool" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System">
