--- a/src/Common.UnitTests.props
+++ b/src/Common.UnitTests.props
@@ -16,5 +16,6 @@
     <PackageReference Include="xunit.runner.reporters" Version="2.4.1" />
     <PackageReference Include="xunit.assert" Version="2.4.1" />
     <PackageReference Include="coverlet.msbuild" Version="2.6.0" />
+    <PackageReference Include="Serilog.Sinks.XUnit" Version="1.0.8" />
   </ItemGroup>
 </Project>
