Cleanup for Friday's draft work, introducing IChanneledMessage<T>

--- a/src/Catalyst.Node.Common/Catalyst.Node.Common.csproj
+++ b/src/Catalyst.Node.Common/Catalyst.Node.Common.csproj
@@ -202,6 +202,7 @@
     <Folder Include="Interfaces\Modules\Contract" />
     <Folder Include="Interfaces\Modules\KeySigner" />
     <Folder Include="Interfaces\Modules\Ledger" />
+    <Folder Include="Interfaces\P2P\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System">
