--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -10,6 +10,14 @@
       ]
     },
     {
+      "type": "Catalyst.Node.Common.Helpers.Shell.RpcNode, Catalyst.Node.Common",
+      "services": [
+        {
+          "type": "Catalyst.Node.Common.Helpers.Shell.IRpcNode, Catalyst.Node.Common"
+        }
+      ]
+    },
+    {
       "type": "Catalyst.Cli.Shell",
       "services": [
         {
